gen/manufacturers/v1/cargo-errors.log
    Checking google-manufacturers1 v0.1.0 (/Users/sthiel/dev/google-apis/generated/gen/manufacturers/v1/lib)
error[E0412]: cannot find type `GetIncludeItems` in module `crate::resources::accounts::products::params`
    --> manufacturers/v1/lib/src/lib.rs:1265:83
     |
1265 |                 include: Option<Vec<crate::resources::accounts::products::params::GetIncludeItems>>,
     |                                                                                   ^^^^^^^^^^^^^^^ not found in `crate::resources::accounts::products::params`

error[E0412]: cannot find type `GetIncludeItems` in module `crate::resources::accounts::products::params`
    --> manufacturers/v1/lib/src/lib.rs:1282:88
     |
1282 |                     value: impl Into<Vec<crate::resources::accounts::products::params::GetIncludeItems>>,
     |                                                                                        ^^^^^^^^^^^^^^^ not found in `crate::resources::accounts::products::params`

error[E0412]: cannot find type `ListIncludeItems` in module `crate::resources::accounts::products::params`
    --> manufacturers/v1/lib/src/lib.rs:1450:78
     |
1450 |                     Option<Vec<crate::resources::accounts::products::params::ListIncludeItems>>,
     |                                                                              ^^^^^^^^^^^^^^^^ not found in `crate::resources::accounts::products::params`

error[E0412]: cannot find type `ListIncludeItems` in module `crate::resources::accounts::products::params`
    --> manufacturers/v1/lib/src/lib.rs:1470:75
     |
1470 |                         Vec<crate::resources::accounts::products::params::ListIncludeItems>,
     |                                                                           ^^^^^^^^^^^^^^^^ not found in `crate::resources::accounts::products::params`

error: aborting due to 4 previous errors

For more information about this error, try `rustc --explain E0412`.
error: Could not compile `google-manufacturers1`.

To learn more, run the command again with --verbose.
